--- a/ChannelIdSettings.json
+++ b/ChannelIdSettings.json
@@ -1,5 +1,5 @@
 [
   "120363419278705038@newsletter",  
   "120363402188211091@newsletter", 
-  "120363402489064302@newsletter",
+  "120363402489064302@newsletter"
 ]
